--- a/view/Makefile
+++ b/view/Makefile
@@ -11,7 +11,7 @@
 
 CC = gcc
 CFLAGS = -Wall -Werror -g
-BINS = testGameView testHunterView testDraculaView testMap testQueue
+BINS = testGameView testHunterView testDraculaView testMap
 
 all: $(BINS)
 
@@ -26,9 +26,6 @@ testDraculaView.o: testDraculaView.c DraculaView.h GameView.h Map.h Places.h Gam
 
 testMap: testMap.o Map.o Places.o
 testMap.o: testMap.c Map.h Places.h
-
-testQueue: testQueue.o Queue.o
-testQueue.o: testQueue.c Queue.h
 
 Queue.o: Queue.c Queue.h
 Places.o: Places.c Places.h Game.h
