Prepared some stuff for dryrun. Passes dryrun. Will automate soon

--- a/view/Makefile
+++ b/view/Makefile
@@ -11,7 +11,7 @@
 
 CC = gcc
 CFLAGS = -Wall -O0 -ggdb3 -Werror
-BINS = testGameView testHunterView testDraculaView testMap testQueue
+BINS = testGameView testHunterView testDraculaView testMap
 
 all: $(BINS)
 
