Edited makefile and some other files

--- a/hunt/Makefile
+++ b/hunt/Makefile
@@ -9,7 +9,7 @@ CC = gcc
 CFLAGS = -Wall -Werror -g
 
 # do not change the following line
-BINS = dracula hunter testHunterView testDraculaView match
+BINS = dracula hunter
 
 # add any other *.o files that your solution requires
 # (and add their dependencies below after DraculaView.o)
@@ -24,8 +24,7 @@ all: $(BINS)
 dracula: playerDracula.o dracula.o DraculaView.o Queue.o $(OBJS) $(LIBS)
 hunter: playerHunter.o hunter.o HunterView.o Queue.o $(OBJS) $(LIBS)
 
-match: match.o dracula.o hunter.o GameView.o Map.o Places.o DraculaView.o HunterView.o Queue.o
-match.o: match.c dracula.h Game.h DraculaView.h HunterView.h GameView.h Places.h Queue.h
+
 
 playerDracula.o: player.c dracula.h Game.h DraculaView.h GameView.h Places.h Queue.h
 	$(CC) $(CFLAGS) -DI_AM_DRACULA -c $< -o $@
@@ -40,11 +39,15 @@ DraculaView.o: DraculaView.c DraculaView.h GameView.h Places.h Game.h
 HunterView.o: HunterView.c GameView.h Places.h HunterView.h Game.h
 Places.o: Places.c Places.h
 
-testHunterView: testHunterView.o testUtils.o HunterView.o GameView.o Map.o Places.o Queue.o
-testHunterView.o: testHunterView.c HunterView.h GameView.h Map.h Places.h Game.h Queue.h
+#testHunterView: testHunterView.o testUtils.o HunterView.o GameView.o Map.o Places.o Queue.o
+#testHunterView.o: testHunterView.c HunterView.h GameView.h Map.h Places.h Game.h Queue.h
 
-testDraculaView: testDraculaView.o testUtils.o DraculaView.o GameView.o Map.o Places.o Queue.o
-testDraculaView.o: testDraculaView.c DraculaView.h GameView.h Map.h Places.h Game.h Queue.h
+#match: match.o dracula.o hunter.o GameView.o Map.o Places.o DraculaView.o HunterView.o Queue.o
+#match.o: match.c dracula.h Game.h DraculaView.h HunterView.h GameView.h Places.h Queue.h
+
+#testDraculaView: testDraculaView.o testUtils.o DraculaView.o GameView.o Map.o Places.o Queue.o
+#testDraculaView.o: testDraculaView.c DraculaView.h GameView.h Map.h Places.h Game.h Queue.h
+
 # if you use other ADTs, add dependencies for them here
 
 .PHONY: clean
