Restore original Makefile

--- a/hunt/MakefileTest
+++ b/hunt/MakefileTest
@@ -6,10 +6,10 @@
 # 2020-07-10	v2.0	Team Dracula <cs2521@cse.unsw.edu.au>
 
 CC = gcc
-CFLAGS = -Wall -Werror
+CFLAGS = -Wall -Werror -g
 
 # do not change the following line
-BINS = dracula hunter
+BINS = dracula hunter testHunterView testDraculaView testGameView match
 
 # add any other *.o files that your solution requires
 # (and add their dependencies below after DraculaView.o)
@@ -24,6 +24,9 @@ all: $(BINS)
 dracula: playerDracula.o dracula.o DraculaView.o Queue.o $(OBJS) $(LIBS)
 hunter: playerHunter.o hunter.o HunterView.o Queue.o $(OBJS) $(LIBS)
 
+match: match.o dracula.o hunter.o GameView.o Map.o Places.o DraculaView.o HunterView.o Queue.o
+match.o: match.c dracula.h Game.h DraculaView.h HunterView.h GameView.h Places.h Queue.h
+
 playerDracula.o: player.c dracula.h Game.h DraculaView.h GameView.h Places.h Queue.h
 	$(CC) $(CFLAGS) -DI_AM_DRACULA -c $< -o $@
 playerHunter.o: player.c hunter.h Game.h HunterView.h GameView.h Places.h Queue.h
@@ -36,6 +39,15 @@ GameView.o:	GameView.c GameView.h Places.h Game.h
 DraculaView.o: DraculaView.c DraculaView.h GameView.h Places.h Game.h
 HunterView.o: HunterView.c GameView.h Places.h HunterView.h Game.h
 Places.o: Places.c Places.h
+
+testHunterView: testHunterView.o testUtils.o HunterView.o GameView.o Map.o Places.o Queue.o
+testHunterView.o: testHunterView.c HunterView.h GameView.h Map.h Places.h Game.h Queue.h
+
+testDraculaView: testDraculaView.o testUtils.o DraculaView.o GameView.o Map.o Places.o Queue.o
+testDraculaView.o: testDraculaView.c DraculaView.h GameView.h Map.h Places.h Game.h Queue.h
+
+testGameView: testGameView.o testUtils.o GameView.o Map.o Places.o Queue.o
+testGameView.o: testGameView.c GameView.h Map.h Places.h Game.h Queue.h
 
 # if you use other ADTs, add dependencies for them here
 
